--- a/undervisningsopgaver/01-js-basic/01-areal.html
+++ b/undervisningsopgaver/01-js-basic/01-areal.html
@@ -13,8 +13,10 @@
         let længde = 3;
         let bredde = 5;
         let areal = længde * bredde;
-        console.log(areal);
 
+        let resultat = 'Længden er ${længde} og bredden er ${bredde} meter. Arealet er ${areal} kvadratmeter'
+
+        console.log(resultat);
     </script>
 </body>
 
