--- a/undervisningsopgaver/01-js-basic/03-goddag.html
+++ b/undervisningsopgaver/01-js-basic/03-goddag.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <script src=""></script>
+    <script>
+        let navn = prompt("Hvad er dit navn?")
+        alert(`Goddag kære ${navn}`);
+
+    </script>
 </body>
 
 </html>
