--- a/undervisningsopgaver/js-DOM/01-select.html
+++ b/undervisningsopgaver/js-DOM/01-select.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,9 +24,16 @@
         // console.log(document.querySelector("#content div + div"));
         // console.log(document.querySelector("#content div + div + div"));
         //console.log(document.querySelector("#content div a"));
-//console.log(document.querySelector("#content div + div a"));
-console.log(document.querySelector("img"));
+        //console.log(document.querySelector("#content div + div a"));
+        console.log(document.querySelector("img"));
+
+
+
+        //Kan også laves hvor querySelector er variabel.
+        //        let console =  document.querySelector("#content");
+        // console.log(document.querySelector("content"));
 
     </script>
 </body>
+
 </html>
