--- a/babushka/forside.html
+++ b/babushka/forside.html
@@ -11,7 +11,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: lightgray;
+            background-color: white;
         }
 
         #retter {
@@ -27,17 +27,22 @@
         }
 
         .ret {
-            /*           border: 1px solid black;*/
-            background-color: white;
+            background-color: lightgray;
             text-align: center;
             margin: 1vw;
             padding: 5px;
+        }
+
+        h1 {
+            display: flex;
+            justify-content: center;
         }
 
         header {
             padding: 25px;
             text-align: center;
             background-color: orange;
+
         }
 
         button {
@@ -51,22 +56,49 @@
             font-size: 16px;
         }
 
-        #liste {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            margin: 5vw;
+        .valgt {
+            background-color: darkgrey;
+        }
 
-            @media only screen and (min-width: 500px) {
-                #retter {
-                    grid-template-columns: auto auto;
-                }
-            }
+        #popup {
+            top: 0;
+            width: 100vw;
+            height: 100vh;
+            position: fixed;
+            background-color: hsla(0, 15%, 48%, 0.5);
+            display: none;
+            overflow: scroll;
+        }
 
-            @media only screen and (min-width:800px) {
-                #retter {
-                    grid-template-columns: auto auto auto;
-                }
+        #indhold {
+            min-height: 50vh;
+            background-color: white;
+            width: 70vw;
+            margin: 4rem auto;
+        }
+
+        #luk {
+            position: fixed;
+            right: 2rem;
+
+        }
+
+        #luk button {
+            font-size: 2rem;
+            padding: 1rem 2rem;
+        }
+
+        @media only screen and (min-width: 500px) {
+            #retter {
+                grid-template-columns: auto auto;
             }
+        }
+
+        @media only screen and (min-width:800px) {
+            #retter {
+                grid-template-columns: auto auto auto;
+            }
+        }
     </style>
 
 </head>
@@ -90,7 +122,6 @@
         </nav>
     </header>
 
-    <div id="liste"></div>
 
 
     <main>
@@ -104,6 +135,10 @@
 
         let retter;
         let dest = document.querySelector("#retter");
+        let filter = "alle";
+
+
+        // Her henter jeg alt den info via linker som jeg skal bruger, og beder den om at await 2 gange, så jeg er sikker på den får det hele med, og bagefter referere til funktionen visRetter.
 
         async function start() {
             const myJson = await fetch("https://mandalskeawebspace.dk/claude_php/clean_up_spreadsheet.php?id=1jxxxFoWBuMJ1qhQ9BQIAyKHmP38XtAF9_sQr0xo5JLo");
@@ -111,17 +146,49 @@
             visRetter();
         }
 
+        // Her får jeg smidt de forskellige informationer ind som jeg skal bruge, opstillet i grit. Jeg kan hente de forskellige info, fordi jeg har smidt linket foroven ind.
+
         function visRetter() {
             dest.innerHTML = "";
             retter.forEach(ret => {
-                dest.innerHTML += `
+                if (filter == "alle" || filter == ret.kategori) {
+                    let template = `
                     <article class="ret">
                         <img src=babushkabilleder/imgs/small/${ret.billede}-sm.jpg alt=${ret.navn}>
                         <h2>${ret.navn}</h2>
                         <p>${ret.kort}</p>
                         <p>${ret.pris}kr.</p>
                     </article>`;
+
+
+                    dest.insertAdjacentHTML("beforeend", template)
+
+
+                    function close() {
+                        document.querySelector("#popup").style.display = "none"
+                    }
+
+                }
             })
+        }
+
+
+        start();
+
+        document.querySelectorAll(".filter").forEach(elm => {
+            elm.addEventListener("click", filtrering);
+        })
+
+        // Min funktion til at filtrere hvor jeg beder den om at fjerne mit markerede "valgt og tilføje det til den som bliver "valgt".
+
+        function filtrering() {
+            document.querySelectorAll(".filter").forEach(elm => {
+                elm.classList.remove("valgt");
+            })
+            this.classList.add("valgt");
+            filter = this.getAttribute("data-ret");
+
+            visRetter();
         }
     </script>
 
