--- a/babushka/forside.html
+++ b/babushka/forside.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personliste</title>
+    <title>Bistro Babushka</title>
 
 
     <style>
@@ -20,6 +20,7 @@
             grid-gap: 1vw;
             max-width: 1000px;
             margin: 0 auto;
+            margin-top: 50px;
         }
 
         img {
@@ -31,6 +32,7 @@
             text-align: left;
             margin: 1vw;
             padding: 10px;
+
         }
 
         h1 {
