--- a/babushka/single.html
+++ b/babushka/single.html
@@ -19,7 +19,8 @@
             grid-template-columns: auto;
             grid-gap: 1vw;
             max-width: 1000px;
-            margin: 0 auto;
+
+
         }
 
         img {
@@ -60,66 +61,72 @@
             background-color: darkgrey;
         }
 
-        #popup {
-            top: 0;
+        #single {
             width: 100vw;
             height: 100vh;
             position: fixed;
-            background-color: hsla(0, 15%, 48%, 0.5);
-            display: none;
+            top: 2rem;
+            /*background-color: hsla(0, 15%, 48%, 0.5);*/
+            /*display: none;*/
             overflow: scroll;
+
         }
 
-        #indhold {
-            min-height: 50vh;
-            background-color: white;
-            width: 70vw;
-            margin: 4rem auto;
-        }
 
         #luk {
             position: fixed;
-            right: 2rem;
+            right: 1.5rem;
+            top: 2.5rem;
+
 
         }
 
         #luk button {
             font-size: 2rem;
-            padding: 1rem 2rem;
+            padding: 0.2rem;
+
         }
 
         @media only screen and (min-width: 500px) {
             #retter {
                 grid-template-columns: auto auto;
+
+            }
+
+            #luk button {
+                padding: 0.5rem 1rem;
+            }
+
+            #luk {
+                right: 3rem;
+                top: 2.3rem;
             }
         }
 
         @media only screen and (min-width:800px) {
             #retter {
                 grid-template-columns: auto auto auto;
+                margin: 2rem 1rem 1rem 25rem;
             }
         }
+
     </style>
 
 </head>
 
 <body>
 
-    <div id="popup">
+    <div id="single">
         <div id="luk">
-            <button>X</button>
+            <button>
+                ⇦ </button> </div>
+        <div id="indhold">
         </div>
-        <div id="indhold"></div>
     </div>
 
     <header>
         <h1 id="logo">Bistro Babushka</h1>
-        <nav id="menu">
-            <button class="filter valgt" data-ret="alle">Alle</button>
-            <button class="filter" data-ret="forretter">Forretter</button>
-            <button class="filter" data-ret="hovedretter">Hovedretter</button>
-            <button class="filter" data-ret="desserter">Desserter</button>
-        </nav>
+
     </header>
 
 
@@ -132,6 +139,9 @@
 
     <script>
         document.addEventListener("DOMContentLoaded", start);
+
+        let urlParams = new URLSearchParams(window.location.search);
+        let retId = urlParams.get("id");
 
         let retter;
         let dest = document.querySelector("#retter");
@@ -149,9 +159,13 @@
         // Her får jeg smidt de forskellige informationer ind som jeg skal bruge, opstillet i grit. Jeg kan hente de forskellige info, fordi jeg har smidt linket foroven ind.
 
         function visRetter() {
+
             dest.innerHTML = "";
             retter.forEach(ret => {
-                if (filter == "alle" || filter == ret.kategori) {
+                if (ret.id == retId) {
+
+                    console.log(ret);
+
                     let template = `
                     <article class="ret">
                         <img src=babushkabilleder/imgs/small/${ret.billede}-sm.jpg alt=${ret.navn}>
@@ -162,36 +176,15 @@
 
 
                     dest.insertAdjacentHTML("beforeend", template);
-                    dest.lastElementChild.addEventListener("click", () => {
-                        location.href = "single.html?id=" + ret.id;
-                    });
 
-                    //                    function close() {
-                    //                        document.querySelector("#popup").style.display = "none"
-                    //                    }
+                    document.querySelector("#luk button").addEventListener("click", () => {
+                        location.href = "forside2.html";
+                    })
 
                 }
             })
         }
 
-
-        start();
-
-        document.querySelectorAll(".filter").forEach(elm => {
-            elm.addEventListener("click", filtrering);
-        })
-
-        // Min funktion til at filtrere hvor jeg beder den om at fjerne mit markerede "valgt og tilføje det til den som bliver "valgt".
-
-        function filtrering() {
-            document.querySelectorAll(".filter").forEach(elm => {
-                elm.classList.remove("valgt");
-            })
-            this.classList.add("valgt");
-            filter = this.getAttribute("data-ret");
-
-            visRetter();
-        }
     </script>
 
 
