--- a/undervisningsopgaver/single/04-luka.html
+++ b/undervisningsopgaver/single/04-luka.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="popup">
+    <div id="popudivip">
         <div id="luk">
             <button> X </button>
         </div>
@@ -104,10 +104,11 @@
             font-size: 2rem;
             padding: 1rem 2rem;
         }
+
     </style>
 
     <script>
-        let alleDyr = [];
+        let alleDyr = [()];
         document.addEventListener("DOMContentLoaded", start);
         let filter = "alle";
 
@@ -179,6 +180,7 @@
         function close() {
             document.querySelector("#popup").style.display = "none";
         }
+
     </script>
 </body>
 
