--- a/italienwebsite/forside.html
+++ b/italienwebsite/forside.html
@@ -11,11 +11,12 @@
         body {
             margin: 0 auto;
             padding: 0;
-            background-color: #E1C699;
+            background-color: #F4EEE1;
         }
 
         a,
         h1,
+        h2,
         p {
             font-family: 'Italiana',
                 serif;
@@ -23,7 +24,7 @@
 
         .tekst {
             text-align: center;
-            margin: 40px 300px 10px 300px;
+            margin: 60px 300px 10px 300px;
             font-size: 1.5rem;
         }
 
@@ -37,34 +38,40 @@
             /*margin: 0 auto;*/
             margin-top: 30px;
             justify-content: center;
+
         }
 
 
 
         .ret {
-            background-color: lightgray;
+            /*            background-color: transparent;*/
+            border: 2px solid black;
             text-align: left;
             /*         margin: 1vw;*/
             padding: 10px;
+            margin: 7px;
             text-align: center;
         }
 
         h1 {
             display: flex;
-            justify-content: center;
+            text-align: left;
+            margin-left: 120px;
             color: whitesmoke;
         }
 
         header {
-            padding: 15px;
+            padding: 0.5px;
             text-align: center;
             background-color: #A9A9B0;
 
         }
 
         button {
-            background-color: white;
-            border: none;
+            background-color: transparent;
+            /*border: none;*/
+            border: 2px solid black;
+            border-radius: 4%;
             color: black;
             padding: 15px 32px;
             margin: 5px;
@@ -74,8 +81,9 @@
             font-size: 16px;
         }
 
+
         .valgt {
-            background-color: darkgrey;
+            background-color: #C4BDAC;
         }
 
         #menu {
@@ -85,7 +93,7 @@
         }
 
         img {
-            width: 400px;
+            width: 350px;
             height: 300px;
         }
 
@@ -223,7 +231,6 @@ padding: 1rem 2rem;
             elm.addEventListener("click", filtrering);
         })
 
-        // Min funktion til at filtrere hvor jeg beder den om at fjerne mit markerede "valgt og tilføje det til den som bliver "valgt".
 
         function filtrering() {
             document.querySelectorAll(".filter").forEach(elm => {
