--- a/italienwebsite/forside.html
+++ b/italienwebsite/forside.html
@@ -4,75 +4,85 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Italien Website</title>
-    <link href="https://fonts.googleapis.com/css?family=Italiana" rel="stylesheet">
+    <title>Dominic De Coco</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
     <style>
         body {
             margin: 0 auto;
             padding: 0;
             background-color: #F4EEE1;
+            overflow-x: hidden;
+        }
+
+        img {
+            width: 100%;
         }
 
         a,
         h1,
         h2,
         p {
-            font-family: 'Italiana',
-                serif;
+            font-family: 'Raleway', sans-serif;
         }
 
-        .tekst {
-            text-align: center;
-            margin: 60px 300px 10px 300px;
-            font-size: 1.5rem;
-        }
+
 
 
         #retter {
             display: grid;
-            /*            grid-template-columns: auto;*/
-            grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+            /*      grid-template-columns: auto;*/
+            grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
             grid-gap: 1vw;
-            /*max-width: 1000px;*/
-            /*margin: 0 auto;*/
-            margin-top: 30px;
+            max-width: 1000px;
+            margin: 0 auto;
             justify-content: center;
+            margin-bottom: 100px;
+
 
         }
 
 
 
         .ret {
-            /*            background-color: transparent;*/
-            border: 2px solid black;
+
             text-align: left;
-            /*         margin: 1vw;*/
-            padding: 10px;
-            margin: 7px;
+            padding-bottom: 10px;
+            margin: 30px 30px 30px 30px;
             text-align: center;
+            background-color: white;
+            width: 350px;
+
+
+
         }
 
-        h1 {
+
+        header h1 {
             display: flex;
             text-align: left;
-            margin-left: 120px;
+            margin-left: 20px;
             color: whitesmoke;
+            font-size: 25px;
         }
 
         header {
-            padding: 0.5px;
+            padding: 0.6px;
             text-align: center;
-            background-color: #A9A9B0;
+            background-color: #2C3539;
 
         }
 
+        .tekst {
+            text-align: center;
+            margin: 40px 10px 5px 10px;
+            font-size: 1rem;
+        }
+
         button {
-            background-color: transparent;
-            /*border: none;*/
-            border: 2px solid black;
-            border-radius: 4%;
-            color: black;
+            background-color: #2C3539;
+            border: none;
+            color: white;
             padding: 15px 32px;
             margin: 5px;
             text-align: center;
@@ -83,28 +93,49 @@
 
 
         .valgt {
-            background-color: #C4BDAC;
+            background-color: rgba(40, 50, 50, 0.24);
+
+
         }
 
         #menu {
             display: flex;
             justify-content: center;
             padding: 25px;
+            flex-direction: row;
         }
 
         img {
             width: 350px;
-            height: 300px;
+            height: 350px;
         }
 
         .cover {
             background-image: url("cover.jpg");
-            width: 100vw;
-            height: 42.9vw;
-            background-size: contain;
+            background-size: cover;
+            width: 100%;
+            height: 35vw;
+            background-position: center;
             background-repeat: no-repeat;
         }
 
+        footer {
+            background-color: #2C3539;
+            height: 100px;
+            width: 100%;
+            color: white;
+            position: inherit;
+            bottom: 0;
+            left: 0;
+            padding: 5px 0 5px 30px;
+        }
+
+        footer p {
+            text-align: left;
+
+            line-height: 25px;
+
+        }
 
         /*
 #popup {
@@ -141,11 +172,52 @@ padding: 1rem 2rem;
             #retter {
                 grid-template-columns: auto auto;
             }
+
+
         }
+
+        @media only screen and (max-width: 500px) {
+
+            #menu {
+                flex-direction: column;
+            }
+
+            #menu button {
+                width: 150px;
+            }
+
+            .ret {
+                margin: 25px;
+                margin-left: 75px;
+            }
+
+
+        }
+
+
 
         @media only screen and (min-width:800px) {
             #retter {
                 grid-template-columns: auto auto auto;
+            }
+
+            .tekst {
+                text-align: center;
+                margin: 100px 300px 10px 300px;
+                font-size: 1.5rem;
+            }
+
+            header h1 {
+                margin-left: 130px;
+                font-size: 30px;
+            }
+
+
+        }
+
+        @media only screen and (max-width:800px) {
+            #retter {
+                max-width: 90%;
             }
         }
     </style>
@@ -165,13 +237,16 @@ padding: 1rem 2rem;
 </div>
 -->
 
-    <header>
-        <h1 id="logo">Italiensk tema</h1>
 
-    </header>
 
     <div class="cover">
+
     </div>
+
+    <header>
+        <h1 id="logo">Dominic De Coco</h1>
+
+    </header>
 
     <div class="tekst">
         <p>
@@ -180,16 +255,27 @@ padding: 1rem 2rem;
     </div>
 
     <menu id="menu">
-        <button class="filter valgt" data-ret="alle">Alle</button>
-        <button class="filter" data-ret="forretter">Forretter</button>
-        <button class="filter" data-ret="hovedretter">Hovedretter</button>
-        <button class="filter" data-ret="desserter">Desserter</button>
+        <div class="top">
+            <button class="filter valgt" data-ret="alle">Alle</button>
+            <button class="filter" data-ret="forretter">Forretter</button>
+        </div>
+        <div class="bottom">
+            <button class="filter" data-ret="hovedretter">Hovedretter</button>
+            <button class="filter" data-ret="drinks">Drinks</button>
+        </div>
     </menu>
 
 
 
 
     <section id="retter"></section>
+
+    <footer>
+        <p>Kontakt os her: <br>
+            31 41 67 43 <br>
+            Grøntorvet Valby </p>
+
+    </footer>
 
 
 
@@ -212,8 +298,8 @@ padding: 1rem 2rem;
                 if (filter == "alle" || filter == ret.kategori) {
                     let template = `
                     <article class="ret">
-                        <h2>${ret.navn}</h2>
                         <img src="billeder/${ret.billede}" alt=${ret.navn}">
+                        <h2>${ret.navn}</h2>
                         <p>${ret.kort}</p>
                         <p>${ret.pris}kr.</p>
                     </article>`;
