--- a/italienwebsite/forside.html
+++ b/italienwebsite/forside.html
@@ -14,7 +14,7 @@
     <div id="popup">
         <div id="box">
             <div id="luk">
-                <button>X</button>
+                <button>×</button>
             </div>
             <div id="indhold"></div>
         </div>
@@ -37,7 +37,7 @@
         </p>
     </div>
 
-    <menu id="menu">
+    <nav id="menu">
         <div class="top">
             <button class="filter valgt" data-ret="alle">Alle</button>
             <button class="filter" data-ret="forretter">Forretter</button>
@@ -46,7 +46,7 @@
             <button class="filter" data-ret="hovedretter">Hovedretter</button>
             <button class="filter" data-ret="drinks">Drinks</button>
         </div>
-    </menu>
+    </nav>
 
 
 
@@ -56,7 +56,8 @@
     <footer>
         <p>Kontakt os her: <br>
             31 41 67 43 <br>
-            Grøntorvet Valby </p>
+            Grøntorvet Valby <br>
+            Dominicdecoco_info@gmail.com</p>
 
     </footer>
 
@@ -83,7 +84,7 @@
                     <article class="ret">
                         <img src="billeder/${ret.billede}" alt=${ret.navn}">
                         <h2>${ret.navn}</h2>
-                        <p>${ret.kort}</p>
+
                         <p>${ret.pris}kr.</p>
                     </article>`;
 
