--- a/italienwebsite/forside.html
+++ b/italienwebsite/forside.html
@@ -21,21 +21,25 @@
     </div>
 
 
-
     <div class="cover">
 
     </div>
+
+
 
     <div id="header">
         <h1 id="logo">Dominic De Coco</h1>
 
     </div>
 
+
     <div class="tekst">
         <p>
             Det italienske køkken er hele Danmarks yndlingskøkken med elskede spiser som pizza, pasta, lasagne og cannelloni. Heldigvis behøver du ikke booke en ferie, for at komme en tur til Italien - du skal i stedet bare vælge en af disse nemme retter!
         </p>
     </div>
+
+<!-- <div class="parallax"></div>-->
 
     <nav id="menu">
         <div class="top">
@@ -47,6 +51,8 @@
             <button class="filter" data-ret="drinks">Drinks</button>
         </div>
     </nav>
+
+
 
 
 
