--- a/05_03_02_sarahdavidsen_italienwebsite/kontakt.html
+++ b/05_03_02_sarahdavidsen_italienwebsite/kontakt.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dominic De Coco</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Italiana" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -14,43 +15,62 @@
     <div id="popup">
         <div id="box">
             <div id="luk">
-                <button>X</button>
+                <button>×</button>
             </div>
             <div id="indhold"></div>
         </div>
     </div>
 
+    <!-- <div id="section">-->
+    <a href="forside.html">
+        <div class="cover">
+            <div class="logo2">
+
+            </div>
+        </div>
+    </a>
 
 
-    <div class="cover">
-
-    </div>
 
     <div id="header">
-        <h1 id="logo">Dominic De Coco</h1>
+        <a href="forside.html">Menu</a>
+        <a href="kontakt.html">Kontakt</a>
+        <a href="om.html">Om os</a>
+
 
     </div>
 
-
-    <div class="tilbageknap">
-        <a href="forside.html">
-            <button>Tilbage til menuen</button>
-        </a>
-    </div>
     <div class="tekst2">
-        <div class="kasse">
-            <h1>Find os her</h1>
-
-            <p>Tlf: 31 41 67 43</p>
-            <p>Dominicdecoco_info@gmail.com</p>
-            <p>Grøntorvet 9, Valby 2500</p>
-
-        </div>
-        <div class="billede">
-            <img src="parallax.JPG" alt="kontakt os">
-        </div>
-
+        <h1>Kontakt os her</h1>
     </div>
+    <!--    </div>-->
+
+    <!-- <div class="parallax"></div>-->
+
+    <div id="section2">
+        <div class="boks1">
+            <p>Har du spørgsmål til menukort, reservationer eller lign,<br>
+                er du velkommen til at kontakt os her
+                <br>
+                <br>
+                Du kan kontakte os fra:
+                <br>
+                Hverdage: 10-22
+                <br>
+                Lørdag: 10-23
+                <br>
+                Søndag: 10-21</p>
+            <p>Tlf: 31 41 67 43</p>
+            <p>Adresse: Grøntorvet 9, Valby 2500</p>
+            <p>Email: Dominicdecoco_info@gmail.com</p>
+        </div>
+        <div class="boks2">
+            <img src="kontaktpic.png" alt="Kontakt os">
+        </div>
+    </div>
+
+
+
 
 
 
@@ -59,7 +79,8 @@
     <footer>
         <p>Kontakt os her: <br>
             31 41 67 43 <br>
-            Grøntorvet Valby </p>
+            Grøntorvet Valby <br>
+            Dominicdecoco_info@gmail.com</p>
 
     </footer>
 
